# rust-dap

./: README.md
boards/rp2040_ram/: Cargo.toml  README.md  build.rs  link.ram.x
boards/rp2040_ram/.cargo/: config.toml
boards/rp2040_ram/src/: main.rs
boards/rpi_pico/: Cargo.toml
boards/rpi_pico/.cargo/: config.toml
boards/rpi_pico/src/: main.rs
boards/xiao_m0/: Cargo.toml
boards/xiao_m0/src/: main.rs  swdio_pin.rs
boards/xiao_rp2040/: Cargo.toml
boards/xiao_rp2040/.cargo/: config.toml
boards/xiao_rp2040/src/: main.rs  pio.rs
rust-dap/: Cargo.toml
rust-dap-rp2040/: Cargo.toml
rust-dap-rp2040/src/: pio.rs  swdio_pin.rs  util.rs
rust-dap-rp2040/src/pio/: jtag.rs  swd.rs
rust-dap/src/: bitbang.rs  cmsis_dap.rs
src/: bitbang.rs
