[package]
name = "rust-dap-rp2040-ram"
version = "0.1.0"
authors = ["Kenta IDA <fuga@fugafuga.org>", "Ein Terakawa <applause@elfmimi.jp>"]
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = 2
codegen-units = 1
opt-level = 'z'
lto = true

[dependencies.rp-pico]
git = "https://github.com/rp-rs/rp-hal.git"
rev = "8d18abdfc7c0129debba85457d32d32175bf36bd"
default-features = false
features = [ "rt" ]

[dependencies]
rust-dap = { path = "../..", features = ["bitbang", "unproven"] }
rp2040-boot2 = "0.2.0"
panic-halt = "0.2"
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-rtic = "1.0"

usb-device = { version = "0.2", features = ["control-buffer-256"]}
usbd-serial = "0.1"
nb = "0.1"
heapless = "0.7"
embedded-hal = { version = "0.2.6", features = ["unproven"]}
embedded-time = "0.12"
